bug(fix): fix line height for recipe of the day

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -112,6 +112,10 @@ nav {
   margin-bottom: 2.4rem;
 }
 
+.text-height {
+  line-height: 1.75rem;
+}
+
 /* .daily-recipe::before {
   position: absolute;
   content: ' ';
